# Learn_Machine_Learning

./: 27_one_hot_Encoding.ipynb  28_Column_Transformer.ipynb  29_pipelines.ipynb  30_Function_Transformer.ipynb  README.md  main.py  pipeline.pickle  pyproject.toml
